# Network_Security_End_to_End

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  dev_README.MD  main.py  project_template.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: main.yml
artifact/2025-04-08-00-04-35/feature_store/: raw_data.csv
artifact/2025-04-08-00-04-35/ingested/: test.csv  train.csv
data_schema/: schema.yaml
src/cloud/: sync_to_s3.py
src/components/: data_ingestion.py  data_transformation.py  data_trasformation.py  data_validation.py  gemini.py
src/components/model/: hyper_params.py  model_evaluation.py  model_trainer.py  prediction.py
src/constant/training_pipeline/: __init__.py
src/database/: db_connection.py  etl_pipeline.py  export_to_mongo.py
src/entity/: artifact_entity.py  config_entity.py
src/exception/: custom_exception.py  custome_excetion.py
src/logger/: logger.py
src/netsec_ml_pipeline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pipeline/: prediction_pipeline.py  training_pipeline.py
src/utils/: data_tranformation.py  get_schema.py  mlflow_setup.py  model_training.py  phishing_features.py  save_final_model.py
