[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-security"  # Use hyphens or underscores, no spaces
version = "0.0.1"
description = "Network security"
authors = [{name = "Vinay", email = "kanukuvinay75@gmail.com"}]
license = {text = "MIT"}
dependencies = []  # Add runtime dependencies here if needed

[project.optional-dependencies]
dev = ["pytest>=6.2"]  # Development dependencies like pytest go here

[tool.some_tool]
setting1 = true
setting2 = "value"

[[tool.some_tool.sub_tool]]
enabled = true