[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netsec-ml-pipeline"
version = "0.0.1"
description = "Network Security ML Pipeline for Phishing Detection"
authors = [{name = "Vinay", email = "kanukuvinay75@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=6.2"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]